<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/cd_button_back"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_back_thin_white_16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageButton
        android:id="@+id/button_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_button_help"
        app:srcCompat="@drawable/ic_help"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_qr"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        app:srcCompat="@drawable/ic_qr"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_help"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/text_qr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/scan_to_import"
        android:fontFamily="@font/inter_light"
        android:textSize="32dp"
        android:textAlignment="center"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/image_qr"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_qr_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_qr_code_for_fullscreen"
        android:fontFamily="@font/inter_light"
        android:textSize="14dp"
        android:textColor="@color/gray_400"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_qr"
        app:layout_constraintLeft_toLeftOf="@id/text_qr"
        app:layout_constraintRight_toRightOf="@id/text_qr" />

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/text_qr_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.futo.platformplayer.views.buttons.BigButton
            android:id="@+id/button_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonText="@string/share"
            app:buttonSubText="@string/send_your_identity_to_another_app"
            app:buttonIcon="@drawable/ic_share" />

        <com.futo.platformplayer.views.buttons.BigButton
            android:id="@+id/button_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonText="@string/copy"
            app:buttonSubText="@string/copy_your_identity_to_clipboard"
            app:buttonIcon="@drawable/ic_copy"
            android:layout_marginTop="8dp" />

        <com.futo.platformplayer.views.buttons.BigButton
            android:id="@+id/button_export_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonText="@string/export_to_file"
            app:buttonSubText="@string/save_profile_to_file_for_sharing"
            app:buttonIcon="@drawable/ic_download"
            android:layout_marginTop="8dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>