<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/cd_button_back"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_back_thin_white_16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageButton
        android:id="@+id/button_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_button_help"
        app:srcCompat="@drawable/ic_help"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_polycentric"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/neopass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_help"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/text_polycentric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/polycentric"
        android:fontFamily="@font/inter_light"
        android:textSize="32dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/image_polycentric"
        app:layout_constraintLeft_toLeftOf="@id/image_polycentric"
        app:layout_constraintRight_toRightOf="@id/image_polycentric" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/text_polycentric">

        <LinearLayout
            android:id="@+id/layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <com.futo.platformplayer.views.buttons.BigButton
                android:id="@+id/button_new_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:buttonIcon="@drawable/ic_person_add"
                app:buttonSubText="@string/generate_a_new_identity"
                app:buttonText="@string/new_profile" />

            <com.futo.platformplayer.views.buttons.BigButton
                android:id="@+id/button_import_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:buttonIcon="@drawable/ic_arrow_downward"
                app:buttonSubText="@string/use_an_existing_identity"
                app:buttonText="@string/import_existing_profile" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>