<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="18dp"
    android:showDividers="middle"
    android:divider="@drawable/divider_transparent_vertical_20dp">

    <TextView
        android:id="@+id/text_no_support_options_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13dp"
        android:textColor="#909090"
        android:fontFamily="@font/inter_light"
        android:gravity="center_horizontal"
        android:text="@string/this_creator_has_not_set_any_support_options_on_harbor_polycentric" />

    <LinearLayout
        android:id="@+id/layout_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            android:text="@string/store"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:textColor="#909090"
            android:fontFamily="@font/inter_light"
            android:text="@string/a_store_by_the_creator" />

        <com.futo.platformplayer.views.buttons.BigButton
            android:id="@+id/button_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonIcon="@drawable/ic_store"
            app:buttonText="@string/store"
            app:buttonSubText="@string/visit_my_store"
            android:layout_marginTop="8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_memberships"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            android:text="@string/memberships" />

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexWrap="wrap"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:textColor="#909090"
                android:fontFamily="@font/inter_light"
                android:text="@string/a_monthly_recurring_payment_with_often" />

            <Space android:layout_width="4dp"
                android:layout_height="match_parent"></Space>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:textColor="#909090"
                android:fontFamily="@font/inter_bold"
                android:text="@string/additional_perks" />
        </com.google.android.flexbox.FlexboxLayout>

        <LinearLayout
            android:id="@+id/layout_membership_entries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:showDividers="middle"
            android:divider="@drawable/divider_transparent_vertical_8dp">
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_promotions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            android:text="@string/promotions" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:textColor="#909090"
            android:fontFamily="@font/inter_light"
            android:text="@string/current_promotions_by_this_creator" />

        <LinearLayout
            android:id="@+id/layout_promotion_entries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <com.futo.platformplayer.views.buttons.BigButton
                android:id="@+id/button_promotion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:buttonIcon="@drawable/ic_star"
                app:buttonText="Promotion"
                app:buttonSubText="URL"
                android:layout_marginTop="8dp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_promotion"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/thumbnail"
                app:shapeAppearanceOverlay="@style/roundedCorners_10dp"
                app:srcCompat="@drawable/placeholder_video_thumbnail" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_donation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            android:text="@string/donation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:textColor="#909090"
            android:fontFamily="@font/inter_light"
            android:text="@string/a_one_time_payment_to_support_the_creator" />

        <LinearLayout
            android:id="@+id/layout_donation_entries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:showDividers="middle"
            android:divider="@drawable/divider_transparent_vertical_8dp">
        </LinearLayout>
    </LinearLayout>
</LinearLayout>