<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:background="@color/black">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="20dp"
        android:paddingBottom="15dp">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/cd_button_back"
            android:paddingRight="20dp"
            app:srcCompat="@drawable/ic_back_thin_white_16dp" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_source"
                android:textSize="24dp"
                android:textColor="@color/white"
                android:fontFamily="@font/inter_extra_light" />
        </FrameLayout>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

    </LinearLayout>


    <com.futo.platformplayer.views.buttons.BigButton
        android:id="@+id/option_qr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        app:buttonText="@string/install_by_qr"
        app:buttonSubText="@string/install_a_plugin_by_scanning_a_qr_code"
        app:buttonIcon="@drawable/ic_qr" />
    <com.futo.platformplayer.views.buttons.BigButton
        android:id="@+id/option_browse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:buttonText="Browse Online Sources"
        app:buttonSubText="Install a plugin by browsing official plugins"
        app:buttonIcon="@drawable/ic_explore" />
    <com.futo.platformplayer.views.buttons.BigButton
        android:id="@+id/option_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:buttonText="@string/install_by_url"
        app:buttonSubText="@string/enter_url_explain"
        app:buttonIcon="@drawable/ic_link" />
    <com.futo.platformplayer.views.buttons.BigButton
        android:id="@+id/option_plugins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        app:buttonText="Install by Store"
        app:buttonSubText="Browse plugins published through Polycentric."
        app:buttonIcon="@drawable/ic_sources" />
</LinearLayout>